# employee-service/internal/models/position.go
@@ -12,3 +12,8 @@ type Position struct {
 	CreatedAt time.Time `json:"created_at" db:"created_at"`
 	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
 }
+
+type PositionList struct {
+	Cursor    string     `json:"cursor"`
+	Positions []Position `json:"positions"`
+}
